intera/stylesheets/application.css
/* ... */
.tabular.settings p{padding-left:300px}
.tabular.settings label{margin-left:-300px;width:295px}
.check_box_group{display:block;width:95%;max-height:120px;overflow-y:auto;padding:0 5px 5px 0;background:#fff;border:1px solid #bebebe;border-radius:2px}
.check_box_group label{font-weight:400;margin-left:0!important;text-align:left;float:none;display:block;width:auto}
.check_box_group.bool_cf{border:0;background:inherit}
#existing-attachments input.description,.attachments_fields input.description{margin-left:5px;width:340px}
#existing-attachments>span,.attachments_fields>span{display:block;white-space:nowrap}
#existing-attachments .filename,.attachments_fields input.filename{border:0;width:250px;color:#626262;background-color:inherit}
.tabular input.filename{max-width:75%!important}
.attachments_fields input.filename{height:40px}
.attachments_fields .ajax-waiting input.filename{background:url(../../../images/hourglass.png) no-repeat 0 50%}
.attachments_fields .ajax-loading input.filename{background:url(../../../images/loading.gif) no-repeat 0 50%}
.attachments_fields div.ui-progressbar{width:100px;height:15px;margin:0 0 -5px 10px;display:inline-block}
a.remove-upload:hover{text-decoration:none!important}
.existing-attachment.deleted .filename{text-decoration:line-through;color:#999!important}
div.attachments p{margin:5px 0 0}
div.attachments span.author{font-size:.9em;color:#767676}
div.thumbnails{margin:5px}
div.thumbnails div{background:#fff;border:2px solid #e1e1e1;display:inline-block;margin-right:0}
div.thumbnails img{margin:5px;vertical-align:middle}
p.other-formats{text-align:right;font-size:.9em;color:#626262}
.other-formats span+span:before{content:"| "}
a.atom{background:url(../../../images/feed.png) no-repeat 1px 50%;padding:5px 0 5px 15px}
em.info{font-style:normal;display:block;font-size:90%;color:#767676}
em.info.error{padding-left:20px;background:url(../../../images/exclamation.png) no-repeat 0 50%}
select.bool_cf{width:auto!important}
#tab-content-users .splitcontentleft{width:64%}
#tab-content-users .splitcontentright{width:34%}
#tab-content-users fieldset{padding:20px;margin-bottom:20px}
#users_for_watcher{height:200px;overflow:auto}
.roles-selection label{display:inline-block;width:210px}
input.autocomplete{background:#fff url(../../../images/magnifier.png) no-repeat 2px 50%;padding-left:20px!important}
.objects-selection{height:300px;overflow:auto;margin-bottom:20px}
#user_group_ids,.objects-selection>div{column-count:auto;column-width:200px;-webkit-column-count:auto;-webkit-column-width:200px;-webkit-column-gap:5px;-webkit-column-rule:1px solid #ccc;-moz-column-count:auto;-moz-column-width:200px;-moz-column-gap:5px;-moz-column-rule:1px solid #ccc}
#errorExplanation,.conflict,.nodata,.warning,div.flash{padding:5px 5px 5px 30px;margin-bottom:10px;font-size:1.1em;border:1px solid;border-radius:4px}
div.flash{margin-top:10px}
#errorExplanation,div.flash.error{background:url(../../../images/exclamation.png) 8px 50% no-repeat;background-color:#f9cacf;border-color:#f9cacf;color:#df182c}
div.flash.notice{background:url(../../../images/true.png) 8px 5px no-repeat;background-color:#d0f2d0;border-color:#d0f2d0;color:#2ea122}
.conflict,div.flash.warning{background:url(../../../images/warning.png) 8px 5px no-repeat;background-color:#ffd;border-color:#ffd;color:#767676;text-align:left}
.warning{text-align:center;background-color:#ffd;border-color:#ffd;color:#767676}
.nodata{background-color:#f5f5f5}
#ajax-indicator{position:absolute;background-color:#efefef;border:1px solid #bebebe;top:35%;left:40%;width:20%;font-weight:700;text-align:center;padding:5px;z-index:100;opacity:.5}
html>body #ajax-indicator{position:fixed}
#ajax-indicator span{background-position:0 40%;background-repeat:no-repeat;background-image:url(../../../images/loading.gif);padding-left:25px;vertical-align:bottom}
table.cal{width:100%;margin:0 0 5px;border:1px solid #bebebe;border-spacing:0;border-radius:4px}
table.cal thead th{width:14%;background-color:#efefef;padding:5px}
table.cal thead th.week-number{width:auto}
table.cal tbody tr{height:100px}
table.cal td{border:1px solid #e1e1e1;vertical-align:top;font-size:.9em;border-bottom:0;border-right:0}
table.cal td.week-number{background-color:#efefef;padding:5px;border:none;font-size:1em}
table.cal td p.day-num{font-size:1.1em;text-align:right}
table.cal td.today{background:#ffd}
p.cal.legend .starting,table.cal .starting a.issue{background:url(../../../images/bullet_go.png) no-repeat -1px -2px;padding-left:15px}
p.cal.legend .ending,table.cal .ending a.issue{background:url(../../../images/bullet_end.png) no-repeat -1px -2px;padding-left:15px}
p.cal.legend .starting.ending,table.cal .starting.ending a.issue{background:url(../../../images/bullet_diamond.png) no-repeat -1px -2px;padding-left:15px}
.tooltip{position:relative;z-index:24}
.tooltip:hover{z-index:25;color:#000}
.tooltip span.tip{display:none;text-align:left}
.tooltip span.tip a{color:#169!important}
.tooltip span.tip img.gravatar{float:none;margin:0}
div.tooltip:hover span.tip{display:block;position:absolute;top:12px;width:270px;border:1px solid #626262;background-color:#fff;padding:5px;font-size:.8em;color:#434343}
table.cal div.tooltip:hover span.tip{top:25px}
img.ui-datepicker-trigger{cursor:pointer;vertical-align:middle;margin-left:5px}
table.progress{border-collapse:collapse;border-spacing:0;empty-cells:show;text-align:center;float:left;margin:0 5px 0 0;width:80px}
table.progress td.todo{background:#efefef none repeat scroll 0}
p.percent{font-size:80%;margin:0}
p.progress-info{clear:left;font-size:80%;margin-top:-5px;color:#767676}
.version-overview table.progress{width:400px}
#content .tabs{overflow:hidden;position:relative;height:30px}
body.controller-issues #content .tabs{height:25px}
#content .tabs ul{margin:0;position:absolute;bottom:0;padding-left:5px;min-width:2000px;width:100%;border-bottom:1px solid #bebebe}
/* ... */

